--- a/package.json
+++ b/package.json
@@ -6,26 +6,29 @@
   "license": "MIT",
   "main": "server.js",
   "repository": {
-	"type": "git",
+    "type": "git",
     "url": "git://github.com/lucasmonteverde/youtube-box.git"
   },
   "engines": {
     "node": ">= 0.10.0"
   },
   "dependencies": {
+    "agenda": "^0.6.28",
     "bluebird": "^2.9.25",
-    "body-parser": "^1.12.3",
-    "compression": "^1.4.3",
+    "body-parser": "^1.12.4",
+    "compression": "^1.4.4",
     "connect-redis": "^2.3.0",
     "cookie-parser": "^1.3.4",
     "cron": "^1.0.9",
     "express": "^4.12.3",
     "express-handlebars": "^2.0.1",
-    "express-session": "^1.11.1",
+    "express-session": "^1.11.2",
     "feed": "^0.2.6",
     "lodash": "^3.8.0",
-    "mongoose": "^4.0.2",
-    "morgan": "^1.5.2",
+    "moment": "^2.10.3",
+    "moment-duration-format": "^1.3.0",
+    "mongoose": "^4.0.3",
+    "morgan": "^1.5.3",
     "passport": "^0.2.1",
     "passport-oauth2-refresh": "^0.4.0",
     "passport-youtube-v3": "^0.1.0",
@@ -38,14 +41,14 @@
     "del": "^1.1.1",
     "dotenv": "^1.1.0",
     "gulp": "^3.8.11",
-    "gulp-autoprefixer": "^2.2.0",
+    "gulp-autoprefixer": "^2.3.0",
     "gulp-imagemin": "^2.2.1",
     "gulp-jshint": "^1.10.0",
     "gulp-load-plugins": "^0.10.0",
     "gulp-newer": "^0.5.0",
     "gulp-nodemon": "^2.0.3",
     "gulp-plumber": "^1.0.0",
-    "gulp-sass": "^2.0.0",
+    "gulp-sass": "^2.0.1",
     "gulp-uglifyjs": "^0.6.2",
     "gulp-util": "^3.0.4",
     "jshint-stylish": "^1.0.2"
