--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "youtube-box",
   "description": "A Youtube Subscriptions Box",
-  "version": "0.4.0",
+  "version": "0.4.1",
   "author": "Lucas Monteverde",
   "license": "MIT",
   "main": "server.js",
@@ -29,6 +29,7 @@
     "moment-duration-format": "^1.3.0",
     "mongoose": "^4.0.4",
     "morgan": "^1.5.3",
+    "newrelic": "^1.19.2",
     "passport": "^0.2.2",
     "passport-oauth2-refresh": "^0.4.0",
     "passport-youtube-v3": "^0.1.0",
