--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "youtube-box",
   "description": "A Youtube Subscriptions Box",
-  "version": "0.4.3",
+  "version": "0.5.0",
   "author": "Lucas Monteverde",
   "license": "MIT",
   "main": "server.js",
@@ -23,9 +23,10 @@
     "express-handlebars": "^2.0.1",
     "express-session": "^1.11.2",
     "feed": "^0.2.6",
+    "helmet": "^0.9.1",
     "lodash": "^3.9.3",
     "moment": "^2.10.3",
-    "mongoose": "^4.0.4",
+    "mongoose": "^4.0.5",
     "morgan": "^1.5.3",
     "newrelic": "^1.20.0",
     "passport": "^0.2.2",
