--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "url": "git://github.com/lucasmonteverde/youtube-box.git"
   },
   "engines": {
-    "node": ">= 0.10.0"
+    "node": "0.12.x"
   },
   "dependencies": {
     "bluebird": "^3.0.5",
