--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "youtube-box",
   "description": "A Youtube Subscriptions Box",
-  "version": "0.6.0",
+  "version": "0.7.0",
   "author": "Lucas Monteverde",
   "license": "MIT",
   "main": "server.js",
@@ -10,7 +10,7 @@
     "url": "git://github.com/lucasmonteverde/youtube-box.git"
   },
   "engines": {
-    "node": "0.12.x"
+    "node": ">0.12.x"
   },
   "dependencies": {
     "bluebird": "^3.1.1",
