--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "youtube-box",
   "description": "A Youtube Subscriptions Box",
-  "version": "0.7.0",
+  "version": "0.7.1",
   "author": "Lucas Monteverde",
   "license": "MIT",
   "main": "server.js",
@@ -13,22 +13,23 @@
     "node": ">0.12.x"
   },
   "dependencies": {
-    "bluebird": "^3.1.1",
+    "bluebird": "^3.1.5",
     "body-parser": "^1.14.2",
+    "cacheman-redis": "^1.1.2",
     "compression": "^1.6.1",
     "connect-redis": "^3.0.2",
     "cookie-parser": "^1.4.1",
     "cron": "^1.1.0",
     "express": "^4.13.4",
-    "express-handlebars": "^2.0.1",
+    "express-handlebars": "^3.0.0",
     "express-session": "^1.13.0",
-    "feed": "^0.2.6",
+    "feed": "^0.3.0",
     "helmet": "^1.1.0",
-    "lodash": "^4.0.0",
+    "lodash": "^4.0.1",
     "moment": "^2.11.1",
-    "mongoose": "^4.3.6",
+    "mongoose": "^4.3.7",
     "morgan": "^1.6.1",
-    "newrelic": "^1.25.0",
+    "newrelic": "^1.25.1",
     "passport": "^0.3.2",
     "passport-oauth2-refresh": "^1.0.0",
     "passport-youtube-v3": "^2.0.0",
