--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "youtube-box",
   "description": "A Youtube Subscriptions Box",
-  "version": "0.7.1",
+  "version": "0.8.0",
   "author": "Lucas Monteverde",
   "license": "MIT",
   "main": "server.js",
@@ -13,45 +13,46 @@
     "node": ">0.12.x"
   },
   "dependencies": {
-    "bluebird": "^3.1.5",
-    "body-parser": "^1.14.2",
+    "bluebird": "^3.4.1",
+    "body-parser": "^1.15.2",
     "cacheman-redis": "^1.1.2",
-    "compression": "^1.6.1",
-    "connect-redis": "^3.0.2",
-    "cookie-parser": "^1.4.1",
+    "compression": "^1.6.2",
+    "connect-redis": "^3.1.0",
+    "cookie-parser": "^1.4.3",
     "cron": "^1.1.0",
-    "express": "^4.13.4",
+    "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.13.0",
     "feed": "^0.3.0",
-    "helmet": "^1.1.0",
-    "lodash": "^4.0.1",
-    "moment": "^2.11.1",
-    "mongoose": "^4.3.7",
-    "morgan": "^1.6.1",
-    "newrelic": "^1.25.1",
+    "helmet": "^2.1.1",
+    "lodash": "^4.13.1",
+    "moment": "^2.13.0",
+    "mongoose": "^4.5.1",
+    "morgan": "^1.7.0",
+    "newrelic": "^1.28.1",
     "passport": "^0.3.2",
     "passport-oauth2-refresh": "^1.0.0",
     "passport-youtube-v3": "^2.0.0",
-    "redis": "^2.4.2",
+    "redis": "^2.6.2",
     "request-debug": "^0.2.0",
-    "request-promise": "^2.0.0"
+    "request-promise": "^3.0.0",
+    "rollbar": "^0.6.2"
   },
   "devDependencies": {
-    "browser-sync": "^2.11.1",
-    "del": "^2.2.0",
+    "browser-sync": "^2.13.0",
+    "del": "^2.2.1",
     "dotenv": "^2.0.0",
-    "gulp": "^3.9.0",
+    "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
-    "gulp-imagemin": "^2.4.0",
-    "gulp-jshint": "^2.0.0",
-    "gulp-load-plugins": "^1.2.0",
-    "gulp-newer": "^1.1.0",
-    "gulp-nodemon": "^2.0.6",
-    "gulp-plumber": "^1.0.1",
-    "gulp-sass": "^2.1.1",
+    "gulp-imagemin": "^3.0.1",
+    "gulp-jshint": "^2.0.1",
+    "gulp-load-plugins": "^1.2.4",
+    "gulp-newer": "^1.2.0",
+    "gulp-nodemon": "^2.1.0",
+    "gulp-plumber": "^1.1.0",
+    "gulp-sass": "^2.3.2",
     "gulp-uglifyjs": "^0.6.2",
     "gulp-util": "^3.0.7",
-    "jshint-stylish": "^2.1.0"
+    "jshint-stylish": "^2.2.0"
   }
 }
