--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "gulp-sass": "^2.3.2",
     "gulp-uglifyjs": "^0.6.2",
     "gulp-util": "^3.0.7",
+    "jshint": "^2.9.2",
     "jshint-stylish": "^2.2.0"
   }
 }
