--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "youtube-box",
   "description": "A Youtube Subscriptions Box",
-  "version": "0.8.0",
+  "version": "0.8.1",
   "author": "Lucas Monteverde",
   "license": "MIT",
   "main": "server.js",
@@ -10,50 +10,51 @@
     "url": "git://github.com/lucasmonteverde/youtube-box.git"
   },
   "engines": {
-    "node": ">0.12.x"
+    "node": "~6.x.x"
   },
   "dependencies": {
-    "bluebird": "^3.4.1",
+    "bluebird": "^3.4.6",
     "body-parser": "^1.15.2",
     "cacheman-redis": "^1.1.2",
     "compression": "^1.6.2",
     "connect-redis": "^3.1.0",
     "cookie-parser": "^1.4.3",
-    "cron": "^1.1.0",
+    "cron": "^1.1.1",
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
-    "express-session": "^1.13.0",
+    "express-session": "^1.14.2",
     "feed": "^0.3.0",
-    "helmet": "^2.1.1",
-    "lodash": "^4.13.1",
-    "moment": "^2.13.0",
-    "mongoose": "^4.5.1",
+    "helmet": "^3.0.0",
+    "lodash": "^4.16.6",
+    "moment": "^2.15.2",
+    "mongoose": "^4.6.5",
     "morgan": "^1.7.0",
-    "newrelic": "^1.28.1",
+    "newrelic": "^1.33.0",
     "passport": "^0.3.2",
     "passport-oauth2-refresh": "^1.0.0",
     "passport-youtube-v3": "^2.0.0",
-    "redis": "^2.6.2",
+    "redis": "^2.6.3",
+    "request": "^2.77.0",
     "request-debug": "^0.2.0",
-    "request-promise": "^3.0.0",
+    "request-promise": "^4.1.1",
     "rollbar": "^0.6.2"
   },
   "devDependencies": {
-    "browser-sync": "^2.13.0",
-    "del": "^2.2.1",
+    "browser-sync": "^2.17.5",
+    "del": "^2.2.2",
     "dotenv": "^2.0.0",
     "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.0",
-    "gulp-imagemin": "^3.0.1",
-    "gulp-jshint": "^2.0.1",
-    "gulp-load-plugins": "^1.2.4",
-    "gulp-newer": "^1.2.0",
-    "gulp-nodemon": "^2.1.0",
+    "gulp-autoprefixer": "^3.1.1",
+    "gulp-imagemin": "^3.1.1",
+    "gulp-jshint": "^2.0.2",
+    "gulp-load-plugins": "^1.4.0",
+    "gulp-newer": "^1.3.0",
+    "gulp-nodemon": "^2.2.1",
     "gulp-plumber": "^1.1.0",
     "gulp-sass": "^2.3.2",
     "gulp-uglifyjs": "^0.6.2",
     "gulp-util": "^3.0.7",
-    "jshint": "^2.9.2",
-    "jshint-stylish": "^2.2.0"
+    "jshint": "^2.9.4",
+    "jshint-stylish": "^2.2.1"
   }
 }
